fixed hero h2 contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ h6 {
 }
 
 #hero h2 {
-  color: rgba(255, 255, 255, 0.6);
+  color: #fff;
   margin-bottom: 50px;
   font-size: 24px;
 }
